--- a/index.html
+++ b/index.html
@@ -10,14 +10,24 @@
     <title>Bookiva - Home</title>
 </head>
 <body>
-    <div class="nav-main">
-        <div class="nav-img">
-            <img src="images/logo.png" alt="">
+    <nav class="navv-main">
+        <div class="nav-main">
+            <div class="nav-img">
+                <img src="images/logo.png" alt="">
+            </div>
+            <div class="nav-links">
+                <a href="#" class="nav-link ff-inter fs-2s">Home</a>
+                <a href="#" class="nav-link ff-inter fs-2s">Reserve</a>
+                <button class="user-nav br-m"><i data-feather="user"></i>  <i data-feather="chevron-down"></i></button>
+            </div>
         </div>
-        <div class="nav-links">
-            <a href="#" class="nav-link ff-inter fs-2s">Home</a>
-            <a href="#" class="nav-link ff-inter fs-2s">Reserve</a>
-            <button class="user-nav br-m"><i data-feather="user"></i>  <i data-feather="chevron-down"></i></button>
+    </nav>
+    <div class="home-content">
+        <h1 class="ff-inter fs-3l fw-600">Discover and book college venues with ease</h1>
+        <p class="ff-inter fs-m">Whether you're planning an event or looking for a space to study, Bookiva makes it simple to reserve the perfect venue on campus. Get started today and streamline your booking experience.</p>
+        <div class="home-buttons"> 
+            <button class="butt-main fs-m">Reserve Now</button>
+            <button class="butt-sub fs-m">Contact Us</button>
         </div>
     </div>
     <script src="index.js"></script>
