--- a/hall-details.html
+++ b/hall-details.html
@@ -9,21 +9,23 @@
     <link rel="stylesheet" href="utility.css">
 </head>
 <body>
-    <div class="hall-pop">
-        <div class="hall-venue-back">
-            <h2>Venue</h2>
-            <button class="venue-close">X</button>
-        </div>
-        <div class="hall-carousel">
-            <img src="images/hallimages/awesome-naruto-and-sasuke-uchicha-l8qyn9k1b0s1hn1q.jpg" alt="Hall Image">
-        </div>
-        <div class="hall-details">
-            <div class="hall-desc ff-inter fs-m">
-                <h3>Alpha Hall, Sri Sairam Engineering College</h3>
+    <div class="hall-center">
+        <div class="hall-pop">
+            <div class="hall-venue-back ff-inter fs-m">
+                <h2>Venue</h2>
+                <button class="venue-close">X</button>
             </div>
-            <div class="hall-reserve ff-inter fs-m">
-                <h4>Available for reservation</h4>
-                <button>RESERVE</button>
+            <div class="hall-carousel">
+                <img src="images/hallimages/awesome-naruto-and-sasuke-uchicha-l8qyn9k1b0s1hn1q.jpg" alt="Hall Image">
+            </div>
+            <div class="hall-details">
+                <div class="hall-desc ff-inter fs-m">
+                    <h3>Alpha Hall, Sri Sairam Engineering College</h3>
+                </div>
+                <div class="hall-reserve ff-inter fs-m">
+                    <h4>Available for reservation</h4>
+                    <button>RESERVE</button>
+                </div>
             </div>
         </div>
     </div>
