--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/feather-icons"></script>
     <link rel="stylesheet" href="style.css">
@@ -13,12 +14,20 @@
     <nav class="navv-main">
         <div class="nav-main">
             <div class="nav-img">
-                <img src="images/logo.png" alt="">
+                <img src="/logo.png" alt="">
             </div>
             <div class="nav-links">
                 <a href="#" class="nav-link ff-inter fs-2s">Home</a>
-                <a href="#" class="nav-link ff-inter fs-2s">Reserve</a>
+                <a href="/venues/" class="nav-link nav-link-login ff-inter fs-2s">Reserve</a>
                 <button class="user-nav br-m"><i data-feather="user"></i>  <i data-feather="chevron-down"></i></button>
+            </div>
+            <div class="user-menu user-menu-hidden">
+                <div class="user-menu-category">
+                    <a class="ff-inter fs-2s user-menu-link" href="/login/">Log in</a>
+                </div>
+                <hr class="user-menu-hr">
+                <a class="ff-inter fs-2s user-menu-link" href="#">Help</a>
+                <a class="ff-inter fs-2s user-menu-link" href="#">Contact</a>
             </div>
         </div>
     </nav>
@@ -26,10 +35,10 @@
         <h1 class="ff-inter fs-3l fw-600">Discover and book college venues with ease</h1>
         <p class="ff-inter fs-m">Whether you're planning an event or looking for a space to study, Bookiva makes it simple to reserve the perfect venue on campus. Get started today and streamline your booking experience.</p>
         <div class="home-buttons"> 
-            <button class="butt-main fs-m">Reserve Now</button>
-            <button class="butt-sub fs-m">Contact Us</button>
+            <a href="/venues/" class="butt-main ff-inter fs-m reserve-btn">Reserve Now</a>
+            <a href="#" class="butt-sub ff-inter fs-m">Contact Us</a>
         </div>
     </div>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
